[tool.poetry]
name = "pythonbot"
version = "0.1.0"
description = ""
authors = ["User <yuri.ogorodnik@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
telebot = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
